style.css
* {
    margin: 0;
    padding: 0;
}

h1 {
    padding: 10px;
    border: 2px solid black;
    text-align: center;
}

.row {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    margin-bottom: 10px;
}

.row input, .row button {
    padding: 10px;
    margin: 1rem;
}

.row .remove-row {
    background-color: red;
    color: white;
    border: none;
    cursor: pointer;
    text-align: center;
}

#header {
    display: flex;
    justify-content: center;
    margin-bottom: 5rem;
}

#contents {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#table-grid {
    width: 100%;
    max-width: 800px;
}

